--- a/LuggageTrackerTool2/src/view/AccountManagement.form
+++ b/LuggageTrackerTool2/src/view/AccountManagement.form
@@ -160,13 +160,8 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="USER">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="User1"/>
-                <StringItem index="1" value="User2"/>
-                <StringItem index="2" value="User3"/>
-                <StringItem index="3" value="User4"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new javax.swing.DefaultComboBoxModel(usernames)" type="code"/>
             </Property>
           </Properties>
           <Events>
