--- a/LuggageTrackerTool2/src/view/LTTLogin.form
+++ b/LuggageTrackerTool2/src/view/LTTLogin.form
@@ -44,10 +44,10 @@
                                   <Component id="PASSWORD_LABEL" min="-2" max="-2" attributes="0"/>
                                   <Component id="USERNAME_LABEL" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="PASSWORD_INPUT" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="USERNAME_INPUT" max="32767" attributes="0"/>
+                                  <Component id="PASSWORD_INPUT" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -127,7 +127,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="USERNAME_INPUT">
       <Properties>
-        <Property name="text" type="java.lang.String" value="username"/>
+        <Property name="text" type="java.lang.String" value="admin"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="USERNAME_INPUTActionPerformed"/>
@@ -135,7 +135,7 @@
     </Component>
     <Component class="javax.swing.JPasswordField" name="PASSWORD_INPUT">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+        <Property name="text" type="java.lang.String" value="admin"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="TITLE_LABEL">
