--- a/LuggageTrackerTool2/src/view/Passenger.form
+++ b/LuggageTrackerTool2/src/view/Passenger.form
@@ -48,17 +48,18 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="PASSENGER_TABLE">
           <Properties>
+            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="9" rowCount="0">
-                <Column editable="true" title="Surname" type="java.lang.Object"/>
-                <Column editable="true" title="" type="java.lang.Object"/>
-                <Column editable="true" title="Name" type="java.lang.Object"/>
-                <Column editable="true" title="Gender" type="java.lang.Object"/>
-                <Column editable="true" title="DoB" type="java.lang.Object"/>
-                <Column editable="true" title="Mob" type="java.lang.Object"/>
-                <Column editable="true" title="Tel" type="java.lang.Object"/>
-                <Column editable="true" title="Home" type="java.lang.Object"/>
-                <Column editable="true" title="Temp" type="java.lang.Object"/>
+                <Column editable="false" title="Surname" type="java.lang.Object"/>
+                <Column editable="false" title="" type="java.lang.Object"/>
+                <Column editable="false" title="Name" type="java.lang.Object"/>
+                <Column editable="false" title="Gender" type="java.lang.Object"/>
+                <Column editable="false" title="DoB" type="java.lang.Object"/>
+                <Column editable="false" title="Mob" type="java.lang.Object"/>
+                <Column editable="false" title="Tel" type="java.lang.Object"/>
+                <Column editable="false" title="Home" type="java.lang.Object"/>
+                <Column editable="false" title="Temp" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
