--- a/LuggageTrackerTool2/src/view/RegistrationPassenger.form
+++ b/LuggageTrackerTool2/src/view/RegistrationPassenger.form
@@ -258,7 +258,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="13" style="2"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="(YYYYMMDD)"/>
+        <Property name="text" type="java.lang.String" value="(YYYY-MM-DD)"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="GENDER">
