Changed varable names in Luggage Registration view

--- a/LuggageTrackerTool2/src/view/RegistrationLuggage.form
+++ b/LuggageTrackerTool2/src/view/RegistrationLuggage.form
@@ -40,7 +40,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
                           <Component id="ANDERS" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PRINT_BUTTON" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -52,13 +52,13 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
                           <Component id="DESCRIPTION" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="LUGGAGEID_LABEL" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="DESCRIPTION_INPUT_FRAME" pref="309" max="32767" attributes="0"/>
                           <Component id="STORAGE_LOCATION_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField1" max="32767" attributes="0"/>
+                          <Component id="LUGGAGEID_INPUT" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -70,8 +70,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LUGGAGEID_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LUGGAGEID_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -95,7 +95,7 @@
               <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PRINT_BUTTON" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="SUBMIT_BUTTON" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -175,9 +175,9 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="PRINT_BUTTON">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
+        <Property name="text" type="java.lang.String" value="Print"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="SUBMIT_BUTTON">
@@ -188,14 +188,14 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SUBMIT_BUTTONActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="LUGGAGEID_LABEL">
       <Properties>
         <Property name="text" type="java.lang.String" value="Luggage ID"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="LUGGAGEID_INPUT">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LUGGAGEID_INPUTActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
