--- a/LuggageTrackerTool2/src/view/RegistrationPassenger.form
+++ b/LuggageTrackerTool2/src/view/RegistrationPassenger.form
@@ -268,6 +268,7 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="MALE_BUTTON">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Male"/>
       </Properties>
       <Events>
@@ -278,6 +279,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Female"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FEMALE_BUTTONActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="HOME_PHONE_NUMBER">
       <Properties>
