Seach bijna af, en het is mogelijk om personen of baggage terug te halen uit de tabellen aan de hand van selectie.

--- a/LuggageTrackerTool2/src/view/SeachBar.form
+++ b/LuggageTrackerTool2/src/view/SeachBar.form
@@ -47,12 +47,12 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="SEARCH_LABEL">
           <Properties>
             <Property name="text" type="java.lang.String" value="Search:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="PASSENGER_OR_LUGGAGE_SELECTOR">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
@@ -62,17 +62,20 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField1">
+        <Component class="javax.swing.JTextField" name="SEARCH_INPUT">
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="SEARCH_BUTTON">
           <Properties>
             <Property name="text" type="java.lang.String" value="Search"/>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SEARCH_BUTTONActionPerformed"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="ADVANCED_SEARCH_BUTTON">
           <Properties>
             <Property name="text" type="java.lang.String" value="Advanced Search"/>
             <Property name="focusable" type="boolean" value="false"/>
@@ -91,7 +94,7 @@
         </Component>
         <Component class="javax.swing.JToolBar$Separator" name="jSeparator2">
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="LOGOUT_BUTTON">
           <Properties>
             <Property name="text" type="java.lang.String" value="Log out"/>
             <Property name="focusable" type="boolean" value="false"/>
@@ -99,7 +102,7 @@
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LOGOUT_BUTTONActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
