--- a/LuggageTrackerTool2/src/view/Luggage.form
+++ b/LuggageTrackerTool2/src/view/Luggage.form
@@ -111,7 +111,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CONNECT_TO_CUSTOMER_BUTTONActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="REFRESH_BUTTON">
           <Properties>
             <Property name="text" type="java.lang.String" value="Refresh Table"/>
             <Property name="focusable" type="boolean" value="false"/>
@@ -119,7 +119,7 @@
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="REFRESH_BUTTONActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="EDIT_BUTTON">
